2006-01-10  Gautier Portet <kassoulet gmail com>

	* Wow, fixed the problem when we generate filenames from tags but tags
	  are not read when preparing filenames.
	  This was a big mess, and I tried numerous solutions, but I will keep
	  the only one that is working for now: just wait tags to be read
	  before starting conversion. Sorry, this sucks...
	  Hopefully I read that GStreamer 0.10 is very better with threads :)

2006-01-07  Gautier Portet <kassoulet gmail com>

	* Added the possibility to pause the conversion.

2005-12-25  Gautier Portet <kassoulet gmail com>

	* Files can only be added once in the list.

2005-12-22  Gautier Portet <kassoulet gmail com>

	* Finally got walking on gnomevfs to work. Now folder importing is really
	  usable...
	* Added a default to tags, so tag-filled destination paths will
	  be valid.

2005-12-20  Gautier Portet  <kassoulet gmail com>

	* Better type detection.
	* Temporary solved the (non?) problem when trying to convert files which
	  don't have tags filled yet.
	

2005-12-05  Gautier Portet  <kassoulet gmail com>

	* Files types are now detected at loading, expect filtering on types
	  soon.

2005-11-29 Gautier Portet  <kassoulet gmail com>

	* file list is now filled asynchronously with tags if they are
	  present.
	* list display is handled completely differently, hope its better like
	  this

2005-11-08  Gautier Portet <kassoulet gmail com>

	* better folder dropping: now we generate a good base/filename for
	  SoundFile. But it works not so well when we want to create folders
	  based on tags, so it will need some more work.

2005-11-07  Gautier Portet <kassoulet gmail com>

	* fixed broken folder dropping. (#5561)

2005-11-06 Gautier Portet <kassoulet gmail com>
	* drag and drop is now able to import a folder.
	* better display of example filename in preferences.
	* gnomevfs support.
	  #1365
	* add a temporary hack for abr/vbr mp3 with quality==9
	  #5445
	* release 0.8.1
	
